# YATL

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  refactoring_plan.md
.github/workflows/: ci.yaml
docs/: parser.ru.md  usage.en.md  usage.ru.md
examples/flask/: api.py
src/yatl/: __init__.py  __main__.py  base_api.py  extractor.py  interface.py  parser.py  render.py  reporter.py  request.py  request_builder.py  run.py  server.py  step_executor.py  utils.py  validator.py
src/yatl/utils/: __init__.py  base_utils.py  context_utils.py  file_utils.py
tests/: conftest.py  ping.test.yaml  server.test.yaml  test_extractor.py  test_request_builder.py  test_run.py  test_validator.py  unit.test.yaml  url_shortner.test.yaml
tests/data/: ping.yatl.yaml
tests_yaml/: base_api.test.yaml  codeforces.yatl.yaml  google.yatl.yaml  ping.test.yaml  server.test.yaml  url_shortner.test.yaml  xml.test.yaml
