[project]
name = "yatl"
version = "0.1.0"
description = "Yet Another Testing Language"
authors = [
    {name = "Khabib Shakhbanov"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "ruff (>=0.15.4,<0.16.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "lxml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "yatl", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)"
]


[project.scripts]
yatl = "yatl.__main__:main"

[project.urls]
Homepage = "https://github.com/Khabib73/YATL"
Documentation = "https://github.com/Khabib73/YATL#readme"
Repository = "https://github.com/Khabib73/YATL"
Issues = "https://github.com/Khabib73/YATL/issues"

[project.keywords]
keywords = ["testing", "api", "yaml", "http", "rest", "declarative"]
